changed config files

--- a/editor/editor.vcxproj.filters
+++ b/editor/editor.vcxproj.filters
@@ -52,4 +52,7 @@
       <Filter>color</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Todo.md" />
+  </ItemGroup>
 </Project>
